# regexbench

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: analyzer.rs  ast.rs  benchmark.rs  dfa.rs  engine.rs  exporter.rs  lib.rs  main.rs  nfa.rs  parser.rs  test_runner.rs  visualize.rs
tests/: integration.rs
