[package]
name = "regexbench"
version = "0.1.0"
edition = "2021"
description = "A regex testing, debugging, and benchmarking CLI tool"
license = "MIT"
authors = ["EdgarOrtegaRamirez"]
repository = "https://github.com/EdgarOrtegaRamirez/regexbench"
keywords = ["regex", "testing", "debugging", "benchmark", "nfa", "dfa"]
categories = ["command-line-utilities", "parsing", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "regexbench"
path = "src/main.rs"
